Update link and header styles in SCSS
Changed link colors for normal and hover states, and set the header background to black for improved visual contrast.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,13 +18,14 @@ p {
 }
 
 a {
-  color: #2879d0;
+  color: #033701;
 }
 a:hover {
-  color: #2268b2;
+  color: #b22244;
 }
 
 header {
+    background: rgb(0, 0, 0);
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
