Update header color and remove theme import
Removed the dynamic theme import and changed the header h2 color from #9ddcff to #c8ff9d for improved visual appearance.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,4 @@
-@import "{{ site.theme }}";
+
 @import "normalize";
 @import "rouge-github";
 @import url('https://fonts.googleapis.com/css?family=Architects+Daughter');
@@ -51,7 +51,7 @@ header h2 {
   font-size: 26px;
   font-weight: normal;
   line-height: 1.3;
-  color: #9ddcff;
+  color: #c8ff9d;
   letter-spacing: 0;
 }
 
