--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
+---
+---
 
-@import "normalize";
-@import "rouge-github";
-@import url('https://fonts.googleapis.com/css?family=Architects+Daughter');
+@import "{{ jekll-theme-architect }}";
 
 /* LAYOUT STYLES */
 body {
