Update SCSS imports for Minima theme
Replaces the Cayman theme import with Minima theme imports, supporting skin selection and initialization for improved theme customization.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,7 @@
 ---
+
 ---
 
-@import 'jekyll-theme-cayman'
+@import
+  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
+  "minima/initialize";
