--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,8 +8,8 @@ body {
   font-size: 15px;
   font-weight: 400;
   line-height: 1.5;
-  color: #666;
-  background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
+  color: #6666667e;
+  background: #fafafa57 url(../images/body-bg.jpg) 0 0 repeat;
 }
 
 p {
@@ -17,18 +17,18 @@ p {
 }
 
 a {
-  color: #2879d0;
+  color: #a028d0;
 }
 a:hover {
-  color: #2268b2;
+  color: #b22252;
 }
 
 header {
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
-  border-bottom: solid 1px #275da1;
+  background: #2ecf51 url(../images/header-bg.jpg) 0 0 repeat-x;
+  border-bottom: solid 1px #a12768;
 }
 
 header h1 {
@@ -38,7 +38,7 @@ header h1 {
   font-size: 72px;
   font-weight: normal;
   line-height: 1;
-  color: #fff;
+  color: #ffffff;
   letter-spacing: -1px;
 }
 
@@ -49,7 +49,7 @@ header h2 {
   font-size: 26px;
   font-weight: normal;
   line-height: 1.3;
-  color: #9ddcff;
+  color: #b7ff9d;
   letter-spacing: 0;
 }
 
@@ -100,7 +100,7 @@ a.button {
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 23px;
   line-height: 1.2;
-  color: #fff;
+  color: #ffffff;
 }
 a.button small {
   display: block;
@@ -217,7 +217,7 @@ form {
   padding-right: 0.3em;
   margin-left: -1.5em;
   content: "//";
-  color: #9ddcff;
+  color: #ff9de2;
 }
 
 #main-content h3 {
@@ -226,7 +226,7 @@ form {
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 18px;
   font-weight: bold;
-  color: #474747;
+  color: #4747470f;
   text-indent: 3px;
 }
 
