--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -100,7 +100,7 @@ a.button {
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 23px;
   line-height: 1.2;
-  color: #fff;
+  color: #ffffff;
 }
 a.button small {
   display: block;
@@ -130,21 +130,21 @@ code, pre {
 
 code {
   padding: 0 3px;
-  background-color: #f2f8fc;
-  border: solid 1px #dbe7f3;
+  background-color: #f2fcf4;
+  border: solid 1px #f3dbe4;
 }
 
 pre {
   padding: 20px;
   overflow: auto;
   text-shadow: none;
-  background: #fff;
+  background: #ffffff;
   border: solid 1px #f2f2f2;
 }
 pre code {
   padding: 0;
-  color: #2879d0;
-  background-color: #fff;
+  color: #d0c828;
+  background-color: #ffffff;
   border: none;
 }
 
