--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,10 @@
         </section>
 
         <aside id="sidebar">
+          <a href="https://digitalwriting.github.io/eng6800-fall2025-sample-portfolio/" class="button">Home</a>
+          <a href="{{ '/teaching/' | absolute_url }}" class="button">Teaching</a>
+          <a href="{{ '/projects/' | absolute_url }}" class="button">Projects</a>
+
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
               <small>Download</small>
