--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+<<a href="https://[taylortrujeque].github.io/Taylor-CV/" class="button">Home</a>
+          <a href="teaching" class="button">Teaching</a>
+          <a href="projects" class="button">Projects</a>
+!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset='utf-8'>
