--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         </section>
 
         <aside id="sidebar">
-          <a href="https://[taylortrujeque].github.io/Taylor-CV/" class="button">Home</a>
+          <a href="https://taylortrujeque.github.io/Taylor-CV/" class="button">Home</a>
           <a href="teaching" class="button">Teaching</a>
           <a href="projects" class="button">Projects</a>
           
