--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
 
         <aside id="sidebar">
           <a href="https://taylortrujeque.github.io/Taylor-CV/" class="button">Home</a>
-          <a href="teaching" class="button">Teaching</a>
-          <a href="projects" class="button">Projects</a>
+          <a href="teaching.html" class="button">Teaching</a>
+          <a href="research.html" class="button">Research</a>
           
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
