--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -38,7 +38,7 @@ header h1 {
   font-size: 72px;
   font-weight: normal;
   line-height: 1;
-  color: #ffffff;
+  color: #ffffff53;
   letter-spacing: -1px;
 }
 
