--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
           <a href="https://taylortrujeque.github.io/Taylor-CV/" class="button">Home</a>
           <a href="https://taylortrujeque.github.io/Taylor-CV/teaching/" class="button">Teaching</a>
           <a href="https://taylortrujeque.github.io/Taylor-CV/research/" class="button">Research</a>
+          <a href="https://taylortrujeque.github.io/Taylor-CV/cv" class="button">CV</a>
           
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
