--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -8,7 +8,7 @@ body {
   font-size: 15px;
   font-weight: 400;
   line-height: 1.5;
-  color: #9d147f;
+  color: #2d10a0;
   background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
 }
 
